some styyling changees

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
   display: grid;
   gap: 20px;
+  bottom: 0px;
   padding: 15px;
   height: 200px;
   color: white;
+  position: relative;
   background-color: rgb(198, 198, 198);
   grid-template-columns: repeat(4, 1fr);
 }
